k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-awesome-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-awesome-app
  template:
    metadata:
      labels:
        app: my-awesome-app
    spec:
      containers:
        - name: my-awesome-app
          image: brownnoteandbluepen/my-awesome-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
