k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-awesome-app
  namespace: dev
spec:
  selector:
    app: my-awesome-app
  ports:
    - port: 80
      targetPort: 80
