k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
spec:
  rules:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-awesome-app
              port:
                number: 80
